@@ -119,3 +119,4 @@ Changes in version 1.13.x
 + Replace mergeRows and mergeCols with new function agglomerateByVariable
 + agglomerateByRank: bugfix related to agglomeration of non-existing tree
 + getHierarchyTree: bugfix related to empty cells in rowData
++ agglomerateByRank: bugfix: trees was not pruned correctly
